--- a/src/themes/default/bases/variables.scss
+++ b/src/themes/default/bases/variables.scss
@@ -204,7 +204,7 @@ $h5: absolutePx(14);
 
 //Size
 $tinySize: relativePx(10);
-$smallSize: calrelativePxc(12);
+$smallSize: relativePx(12);
 $mediumSize: relativePx(14);
 $largeSize: relativePx(18);
 $hugeSize: relativePx(20);
