--- a/site/public/scss/style.scss
+++ b/site/public/scss/style.scss
@@ -104,14 +104,21 @@ header.gnb .logo {
   display: flex;
   align-items: center;
   gap: 10px;
+  .buttons-part {
+    display: flex;
+    gap: inherit;
+  }
+  .more {
+    display: none;
+  }
 }
 .pages .main-menu .toggle-menu {
   display: none;
 }
 .sub-menu.float {
   position: absolute;
-  top: 10px;
-  right: 20px;
+  top: 100%;
+  right: 10px;
   z-index: 999;
 }
 .main-container {
@@ -546,6 +553,28 @@ section pre {
       right: 5px;
       padding :5px;
     }
+    .sub-menu .more {
+      display: flex;
+    }
+    .buttons-part {
+      background-color: var(--bgc);
+      padding: 5px;
+      border-radius: 2em;
+      border: 1px solid var(--brd);
+      width: max-content;
+      position: absolute;
+      top: calc($gnbHeight + 5px);
+      right: 10px;
+      margin-right: -100%;
+      display: flex;
+      gap: 10px;
+      z-index: 9999;
+      transition: margin-right 250ms ease;
+      &.on {
+        margin-right: 0;
+      }
+      > div {flex-shrink: 0; margin: 0;}
+    }
   }
   .main-container {
     .left-part {
@@ -570,6 +599,14 @@ section pre {
     .color-box {
       min-width: 90px;
       height: 90px;
+    }
+  }
+  #welcome {
+    .container {
+      margin-top: 10px;
+    }
+    .section-contents {
+      width: 100%;
     }
   }
 }
