--- a/site/public/scss/style.scss
+++ b/site/public/scss/style.scss
@@ -149,11 +149,18 @@ header.gnb .logo {
     .page-header {
       padding: 0 20px;
       text-align: center;
-      margin-bottom: 50px;
+      margin: 50px 0;
       display: flex;
       flex-direction: column;
       gap: 10px;
       line-height: 1.4;
+    }
+    .page-contents {
+      margin: 50px 0;
+      .buttons {
+        display: flex;
+        justify-content: center;
+      }
     }
     .page-icon {
       font-size: 6em;
@@ -247,7 +254,8 @@ section {
   margin: 0 auto;
   padding: 20px;
   //border: 1px solid #d6d6d6;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
+  border-top: 1px solid var(--brd);
   .section-title {
     padding-bottom: 20px;
     border-bottom: 1px solid #efefef;
@@ -324,7 +332,7 @@ section {
 
 }
 #custom-theme {
-  padding: 50px 40px;
+  // padding: 50px 40px;
   .user-custom-theme {
     text-align: center;
   }
